objects/Lead.object
<CustomObject>
    <fields>
        <fullName>ILM_Contract_End__c</fullName>
        <label>ILM Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ILM__c</fullName>
        <description>ILM Tool for Dealer</description>
        <inlineHelpText>Click which ILM tool the dealer is currently using for future usage.</inlineHelpText>
        <label>ILM</label>
        <picklist>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.Q - (Voices)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Doone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Dealer Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Manager - Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealerconnection.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Peak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealerSkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Socket</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ImportedNotes__c</fullName>
        <description>Imported notes for the current lead</description>
        <inlineHelpText>Imported notes for the current lead</inlineHelpText>
        <label>Imported Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Independent_Dealer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Independent Lot - Non-Franchised Dealer</description>
        <label>Independent Lot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_WeBex_cpmpleted_by__c</fullName>
        <label>Initial WeBex completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Webex_Complete__c</fullName>
        <label>Initial Webex Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Brian Siple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brina Olson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chase Abbott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cody Garnett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don Favero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jamie Bange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mathew Weldon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul McMinn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shawn Morse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mo Zahabi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Webex_set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Webex set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Webex_set_date__c</fullName>
        <label>Initial Webex set date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsLead__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to track Opps created from converted Leads.</description>
        <label>IsLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_lead_an_existing_account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this lead an existing account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KBB_Status__c</fullName>
        <label>KBB Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Age__c</fullName>
        <formula>Today() - LastActivityDate</formula>
        <inlineHelpText>formula field that calculates the last activity age - used for reporting</inlineHelpText>
        <label>Last Activity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>IF( IsConverted = True,  ConvertedDate -  DATEVALUE(CreatedDate) , Today()-  DATEVALUE(CreatedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if lead is converted, age = converted date less created date, if lead not converted, age = today less created date</inlineHelpText>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Billing_Address_Same_as_Physical__c</fullName>
        <label>Lead Billing Address Same as Physical?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <inlineHelpText>used for round robin assignment</inlineHelpText>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <inlineHelpText>formula field that records the role of the lead owner, used for filtering reports and dashboards</inlineHelpText>
        <label>Lead Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Providors__c</fullName>
        <inlineHelpText>Select and add one or multiple lead providor(s) by clicking on the name and then clicking the arrow.</inlineHelpText>
        <label>Lead Providers</label>
        <picklist>
            <picklistValues>
                <fullName>AutoByTel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Trader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoUSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoWeb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carsoup.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM OneSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMotors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JumpStart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keepitlocal.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lot Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOYSYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VPMarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehix</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Lead_Quality__c</fullName>
        <formula>CASE( Status , 
&quot;Bad&quot;, &quot;Bad&quot;, 
&quot;Unqualified&quot;, &quot;Bad&quot;,
&quot;Duplicate&quot;, &quot;Bad&quot;,
&quot;Good&quot;)</formula>
        <inlineHelpText>formula field that looks at the lead status and groups bad, duplicate and unqualified into Bad and all others into Good</inlineHelpText>
        <label>Lead Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_2__c</fullName>
        <formula>IF( ISPICKVAL( LeadSource  , &quot;Cold Call&quot;), &quot;Cold Call&quot;,
IF( ISPICKVAL(LeadSource , &quot;Digital Dealer Magazine&quot;), &quot;Digital Dealer Magazine&quot;,
IF( ISPICKVAL(LeadSource , &quot;EVP&quot;), &quot;EVP&quot;,
IF( ISPICKVAL(LeadSource , &quot;Get Auto&quot;), &quot;Get Auto&quot;,
IF( ISPICKVAL(LeadSource , &quot;Incoming Call&quot;), &quot;Incoming Call&quot;,
IF( ISPICKVAL(LeadSource , &quot;VS Website&quot;), &quot;VS Website&quot;,
IF( ISPICKVAL(LeadSource , &quot;Mailing List&quot;), &quot;Mailing List&quot;,
IF( ISPICKVAL(LeadSource , &quot;Referral&quot;), &quot;Referral&quot;,
IF( ISPICKVAL(LeadSource , &quot;WebEx&quot;), &quot;WebEx&quot;,
IF( ISPICKVAL(LeadSource , &quot;Auto Trader.com&quot;), &quot;Auto Trader.com&quot;,
IF( ISPICKVAL(LeadSource, &quot;Neglected Account&quot;), &quot;Neglected Account&quot;,&quot;Other&quot;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>setup to add the Lead Source from a converted Lead to the Account</inlineHelpText>
        <label>Lead Source_2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Type__c</fullName>
        <label>Lead Source Type</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions Employee (not PM, WAM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions WAM</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Type__c</fullName>
        <label>Lead Status Type</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fictitious Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Not Responsive to Emails/Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Lead/Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Working Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Information from Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>National Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>Legacy ObjectID for Migration Purposes</description>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Size_New__c</fullName>
        <label>Lot Size - New</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36-45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46-55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56-65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126-150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>751+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lot_Size_Used__c</fullName>
        <label>Lot Size - Used</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36-45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46-55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56-65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126-150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>751+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Pricing_Tool__c</fullName>
        <label>Market Pricing Tool</label>
        <picklist>
            <picklistValues>
                <fullName>AAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autostar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Look</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vinsolutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metro_Area__c</fullName>
        <description>Metro Area</description>
        <label>Metro Area</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nexus_ID__c</fullName>
        <label>SalesNexusContactID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Rooftop_s__c</fullName>
        <label>Number of Rooftop(s)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>105-120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120-135</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>135-150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75-90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90-105</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OTL_Contract_End__c</fullName>
        <inlineHelpText>Type in Full month name, no abbreviations. Month and Year required, example. March 2008</inlineHelpText>
        <label>OTL Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OTL_Number_of_Vehicles_per_Month__c</fullName>
        <label>OTL Number of Vehicles per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTL_Number_of_times_per_week__c</fullName>
        <label>OTL Number of times per week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTL_Price_per_Vehicle__c</fullName>
        <label>OTL Price per Vehicle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OTL_Service__c</fullName>
        <label>OTL Service</label>
        <picklist>
            <picklistValues>
                <fullName>1dealernetwork.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlantic Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autobahn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBlitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Circuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Exac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revelutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Stix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Trader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader (Hosted)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Hills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BluSolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cherry Auto Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrome a Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data One DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Fusion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opp_Type__c</fullName>
        <inlineHelpText>you must select the products the dealer is interested in</inlineHelpText>
        <label>Products of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>ATC/KBB Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC/KBB Non-Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AuctionGenius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoTrader Classics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY / Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genius Labs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak Non-Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet Non-Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILM (Internet Lead Management)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB PAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stockwave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM Non-Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto Non-Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions Core</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Id__c</fullName>
        <formula>OwnerId 

&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(OwnerId,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(OwnerId,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,2,0)
    +IF(FIND(MID(OwnerId,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID (OwnerId,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF (FIND(MID(OwnerId,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(OwnerId,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,1,0)
    +IF(FIND(MID(OwnerId,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID (OwnerId,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF (FIND(MID(OwnerId,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(OwnerId,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,16,0)
    )+1,1)
&amp; MID (&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID (OwnerId,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(OwnerId,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(OwnerId,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;) &gt;0,4,0)
    +IF(FIND(MID(OwnerId,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID (OwnerId,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_Desired__c</fullName>
        <label>Product Type Desired</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>